@@ -1,13 +1,11 @@
 package com.trodix.episodate.v2.episodateapi.security;
 
 import lombok.RequiredArgsConstructor;
-import lombok.Value;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
-import org.springframework.security.config.annotation.web.configurers.CorsConfigurer;
-import org.springframework.security.config.annotation.web.configurers.oauth2.client.OAuth2ClientConfigurer;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.session.NullAuthenticatedSessionStrategy;
 import org.springframework.security.web.authentication.session.SessionAuthenticationStrategy;
@@ -21,12 +19,8 @@ import java.util.List;
 @Configuration
 @RequiredArgsConstructor
 @EnableMethodSecurity(securedEnabled = true, jsr250Enabled = true)
+@Slf4j
 public class WebSecurityConfig {
-
-        private final KeycloakJwtAuthenticationConverter keycloakJwtAuthenticationConverter;
-
-//        @Value("${app.auth.allowed-origins}")
-//        private String[] allowedOrigins;
 
         @Bean
         public SessionAuthenticationStrategy sessionAuthenticationStrategy() {
@@ -34,9 +28,13 @@ public class WebSecurityConfig {
         }
 
         @Bean
-        public SecurityFilterChain filterChain(final HttpSecurity http) throws Exception {
+        public SecurityFilterChain filterChain(
+                HttpSecurity http,
+                KeycloakJwtAuthenticationConverter keycloakJwtAuthenticationConverter,
+                CorsConfigurationSource corsConfigurationSource
+        ) throws Exception {
 
-                http.cors(CorsConfigurer::disable);
+                http.cors(c -> c.configurationSource(corsConfigurationSource));
 
                 // OAUTH authentication
                 http
@@ -54,18 +52,20 @@ public class WebSecurityConfig {
                 return http.build();
         }
 
-//        @Bean
-//        public CorsConfigurationSource corsConfigurationSource() {
-//                final CorsConfiguration configuration = new CorsConfiguration();
-//                configuration.setAllowedOrigins(Arrays.asList(allowedOrigins));
-//                configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PATCH", "PUT", "DELETE", "OPTIONS", "HEAD"));
-//                configuration.setAllowCredentials(true);
-//                configuration.setAllowedHeaders(List.of("*"));
-//                configuration.setExposedHeaders(List.of("X-Get-Header"));
-//                configuration.setMaxAge(3600L);
-//                final UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-//                source.registerCorsConfiguration("/**", configuration);
-//
-//                return source;
-//        }
+        @Bean
+        public CorsConfigurationSource corsConfigurationSource(CorsProperties corsProperties) {
+                log.info("Registering CORS configuration with allowed origins {}", corsProperties.getAllowedOrigins());
+
+                final CorsConfiguration configuration = new CorsConfiguration();
+                configuration.setAllowedOrigins(Arrays.asList(corsProperties.getAllowedOrigins()));
+                configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PATCH", "PUT", "DELETE", "OPTIONS", "HEAD"));
+                configuration.setAllowCredentials(true);
+                configuration.setAllowedHeaders(List.of("*"));
+                configuration.setExposedHeaders(List.of("X-Get-Header"));
+                configuration.setMaxAge(3600L);
+                final UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+                source.registerCorsConfiguration("/**", configuration);
+
+                return source;
+        }
 }
